Fix: Remove view switcher from PLP on mobile

--- a/src/pages/ProductListPage/ProductListPage.module.scss
+++ b/src/pages/ProductListPage/ProductListPage.module.scss
@@ -1,3 +1,5 @@
+$mobileWidth: 540px;
+
 .searchBlock {
   display: flex;
   width: 100%;
@@ -36,7 +38,7 @@
   width: 100%;
 }
 
-@media (max-width: 540px) {
+@media (max-width: $mobileWidth) {
   .searchBlock {
     flex-direction: column;
     align-items: stretch;
@@ -44,6 +46,15 @@
 
   .filter {
     margin-right: 0 !important;
+  }
+
+  .row {
+    width: 100%;
+    align-self: stretch;
+  }
+
+  .found {
+    margin-top: 20px !important;
   }
 
   .search {
